--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <script src="./dist/main.bundle.js" defer></script>
+    <script src="./dist/app.bundle.js" defer></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -227,5 +227,17 @@
         Reserved.
       </div>
     </footer>
+    <script>
+      (function () {
+        if ('serviceWorker' in navigator) {
+          navigator.serviceWorker
+            .register('./service-worker.js')
+            .then(() => console.log('Service Worker registered successfully.'))
+            .catch((error) =>
+              console.log('Service Worker registration failed:', error)
+            );
+        }
+      })();
+    </script>
   </body>
 </html>
